css/styles.css
@font-face {
    font-family: headerFont;
    src: url(../Content/GravitasOne-Regular.ttf);
  }
@font-face {
    font-family: mainFont;
    src: url(../Content/Outfit-VariableFont_wght.ttf);
}

body{
    background-color: paleturquoise;
}
p {
    font-size:1rem;
    font-family: mainFont;
    text-align: left;
    text-indent: 10px;
}
  
h1 {
    text-align: center; /* Center the heading text */
    flex-grow: 1; /* Allow the heading to grow and occupy remaining space */
    font-size: 3rem;
    font-weight: bold;
  }
  
button{
    background-color: transparent;
    border: 0px;
}

.card-quote{
    font-weight: 600;
    text-align: center;
    text-indent: 0;
}

.heading {
    display: flex;
    justify-content: space-between; /* Align items with space in between */
    align-items: center; /* Center items vertically */
    max-width: 100vw;
    margin: auto;
    padding: 20px; /* Add padding for spacing */
  }
  
  button.help-btn {
    width: auto;
    height: 10vw;
    margin-top: -50px;
  }
 
.help-popup{
    background-color: aliceblue;
    width: 25vw;
    padding: 25px;
    height: fit-content;
    margin: 10px auto;
    border-radius: 25px;
    z-index: 900;
    position: fixed;
    top: 50%; 
    left: 50%;
    transform: translate(-50%, -50%); 
    display: none;
}
.nest{
    width: 15vw;
    justify-content: center;
    display: flex;
    align-items: center;
    margin: auto;
}

#call2action{
    font-family: mainFont;
    font-weight: 600;
    width: 20vw;
}

.help-popup p{
    width: 25vw;
    text-indent: 0;
    text-align: center;
    margin: 20px auto;
}

.help-header{
    display: flex;
    justify-content: center;
    margin: 0;
    font-family: sans-serif;
}

.help-content{
    margin-top: 50px;
}

#submitbtn{
    background-color:rgb(171, 127, 89);
    border-radius: 25px;
    padding: 8px;
}

.heading{
    color:palevioletred;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    font-family: headerFont;
}

.input{
    float:inherit;
    z-index: 2;
    position:relative;
    top:-920px;
    background-color: rgb(88, 69, 44);
    max-width: fit-content;
    margin: auto;
    border-radius: 15px;
    padding: 15px;
    color: rgb(243, 168, 103);
}

.input-content{
    padding: 15px 15px;
}

.submit{
    margin:5px;
}

.grid-container{
    z-index:1;
    position: relative;
    display: grid;
    grid-template-columns: 200px 100px 200px 400px 100px 200px 200px;
    grid-template-rows: 220px;
    max-width: 100vw;
    top:-20px;
}
.flex{
    z-index: 1;
    position: relative;
    display: flex;
    align-items: flex-end;
    justify-content: space-around;
    top:70px;
}
.eggs{
    z-index: 1;
    position: relative;
}
.egg{
    transform: scale(.8);
}
.egg2{
    transform: scale(.8);
}
#owl-jan{
    grid-column: 1 / span 1;
    justify-self: self-start;
    align-self: self-end;
}
#wilsons-apr{
    grid-column: 5 / span 1;
    align-self: self-end;
    justify-self: self-end;
}
#rooster-nov{
    align-self: self-end;
    justify-self: self-start;
}
#robin-mar{
    align-self: self-end;
    justify-self: self-end;
}
#raven-dec{
    align-self:self-end;
    justify-self: self-end;
}
#dove-jun{
    align-self:self-end;
    justify-self: self-end;
}

.branch{
    z-index: 0;
    position:relative;
    top:-382px;
}
.branch-top1{
    z-index: 0;
    position: relative;
    top: -505px;
    transform: scaleY(.8);
}
.branch-top2{
    z-index:0;
    position: relative;
    top: -464px;
    left: 176px;
    transform: scaleX(1.1);
    transform: rotate(-5deg);
}

.hover{
    transition: transform 0.2s ease;
}
.hover:hover{
    transform: scale(1.1);
}

.card-header{
    display: flex;
    justify-content: center;
    margin: 0;
    font-family: sans-serif;
}
.esc-btn{
    width: 2vw;
    height: auto;
    z-index: 5;
    position: absolute;
    top: 20px;
    left: 20px;
}

.esc-btn.lighter{
    background-color: bisque;
    border-radius: 7px;
}

.bird-img{
    max-width: 15vw;
    margin: auto;
    display: flex;
    border-radius: 15px;
}

.cards a{
  color: rgb(47, 137, 255); /* Set text color */
  display: flex;
  font-size: 0.8rem; /* Set font size */
  margin:0;
  justify-content: center; /* Center horizontally */
  background-color: antiquewhite;
  border-radius: 20px;
}

.cards{
    display: none;
    width: 25vw;
    height: fit-content;
    margin: 10px auto;
    padding:15px;
    border-radius: 25px;
    z-index: 999; 
    position: fixed; 
    top: 50%; 
    left: 50%;
    transform: translate(-50%, -50%);
}
.owl{
    background-color:cadetblue;
    color: rgb(252, 245, 233); 
}

.parrot{
    background-color:coral;
}

.robin{
    background-color:lightblue;
}

.warbler{
    background-color:yellowgreen;
}

.nightingale{
    background-color:cornflowerblue;
}

.dove{
    background-color:gainsboro;
}

.eagle{
    background-color:gold;
}

.kingfisher{
    background-color:aquamarine;
}

.hawk{
    background-color:burlywood;
}

.swan{
    background-color:pink;
}

.rooster{
    background-color:firebrick;
    color:blanchedalmond;
}

.raven{
    background-color:darkblue;
    color:blanchedalmond;
}

p.raven{
    color: blanchedalmond;
}

